# hammad-python-legacy

./: .gitignore  README.md  readthedocs.yaml  requirements.txt  setup.py
docs/: CNAME  conf.py  genindex.html  hammadpy.data.html  hammadpy.html  hammadpy.interactions.html  hammadpy.ml.hf.html  hammadpy.ml.open.html  hammadpy.ml.open.rst  hammadpy.ml.transformers.rst  index.html  index.rst  modules.html  py-modindex.html  requirements.txt
docs/_modules/: index.html
docs/_sources/: hammadpy.interactions.rst.txt  modules.rst.txt
docs/hammadpy.ml/: index.html
docs/html/: objects.inv
docs/source/: conf.py  index.rst
hamPy/: __init__.py  hampy.py
hamPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hamPy/core/: __init__.py
hamPy/image/: image.py
hamPy/pydantic/: models.py
hammPy/: __init__.py
hammPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hammPy/image/: __init__.py
hammad-py/: __init__.py  hammPy.py
hammad-py/core/: __init__.py
hammad-python/: __init__.py  hamPy.py
hammad-python/llms/: __init__.py
hammad_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hammadpy/: __init__.py  accelerator.py  core.py  database.py  gui.py  hamPy.py  instruct.py  module.py  ui.py  vector_database.py
hammadpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hammadpy/core/: __init__.py  core.py
light/: setup.py
notebooks/: hammadpy.ipynb  tests.ipynb
pages/: conf.py  index.rst
rust/: RUST.md
rust/hpyrust_text/: Cargo.toml  setup.py
rust/hpyrust_text/.github/workflows/: wheels.yml
rust/hpyrust_text/src/: lib.rs
(+173 files in other folders)
