[package]
name = "hpyrust_text"
version = "0.1.5"  # Update the version to match setup.py
authors = ["Hammad Saeed <hammad@supportvectors.com>"]
edition = "2021"
description = "New text library/dependency built on rust, for hammadpy."
license = "MIT"

[lib]
name = "hpyrust_text"
crate-type = ["cdylib"]

[dependencies]
colored = "2.0.0"

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]

[package.metadata.maturin]
python-source = "python"